# nwtrack

./: .env_example  .gitignore  README.md  pyproject.toml
scripts/: a_init_database.py  b_init_tables.py  c_insert_accounts.py  convert_wide_csv_to_long.py  d_insert_balances.py  demo.py  e_find_active_accounts.py  ex_balance_data.py  ex_copy_balances.py  ex_exchange_rates.py  exp_container_repo.py  exp_sqlite_conn_singleton.py  f_print_nw_hist.py  g_update_balance.py  init_db_from_csv_files.py  sample_exchange_rates.py  test_setup.py
sql/: nwtrack_ddl.sql
src/nwtrack/: __init__.py  admin.py  common.py  compose.py  config.py  container.py  dbmanager.py  fileio.py  mapper_registry.py  mappers.py  models.py  repo_registry.py  repos.py  services.py  unitofwork.py  use_cases.py
tests/: conftest.py  fakes.py  test_account_service.py  test_balance_updater.py  test_compose.py  test_container.py  test_db.py  test_db_initializer_csv.py  test_mapper_registry.py  test_mappers.py  test_month.py  test_repo_registry.py  test_repos.py  test_services.py
tests/data/: basic.py
tests/data/csv/: accounts.csv  balances.csv  categories.csv  currencies.csv  exchange_rates.csv
