[project]
name = "nwtrack"
version = "0.1.0"
description = "Net worth tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
]

[project.scripts]
nwtrack = "nwtrack:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
]

[tool.mypy]
mypy_path = "src"

